feat: Implement Auto Fisher functionality and configuration options
- Added AutoFisher class to automate fishing actions in the game.
- Introduced FishingBobberEntityAccessor mixin to access caught fish status.
- Updated ModConfig to include new settings for captcha auto-solve and auto fisher delays.
- Modified DiscordWebhook to use URI for webhook URL handling.
- Cleaned up imports in HeadTextureClipboard.
- Added FishingBobberEntityAccessor to mixins configuration.